tests/data/placebo/test_appelb_add_security_group/elasticloadbalancing.DescribeTags_1.json
{
  "status_code": 200,
  "data": {
    "TagDescriptions": [
      {
        "ResourceArn": "arn:aws:elasticloadbalancing:us-east-1:123412341234:loadbalancer/app/test-abc/543530edaee12345",
        "Tags": [
          {
            "Key": "testkey",
            "Value": "testval"
          }
        ]
      }
    ],
    "ResponseMetadata": {}
  }
}
