tests/data/placebo/test_appelb_add_security_group/elasticloadbalancing.SetSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroupIds": [
      "sg-01a19f602ecaf25f4",
      "sg-c573e6b3"
    ],
    "ResponseMetadata": {}
  }
}
